force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Accept2__c.field-meta.xml
<CustomField>
    <fullName>Accept2__c</fullName>
    <formula>HYPERLINK(
    &quot;/apex/Apttus_QPConfig__ProposalAccept?id=&quot;&amp;Id,
    IMAGE(
        &quot;/resource/Apttus_QPConfig__Button_Accept&quot;,
        &quot;Accept&quot;
    ),
    &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accept</label>
    <type>Text</type>
</CustomField>