force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Amount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Ext_Net_Price__c</summarizedField>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>