force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__CreateAgreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__CreateAgreement__c</fullName>
    <description>Create Agreement, if the proposal is accepted.</description>
    <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Accepted&quot;) , IF($User.UIThemeDisplayed == &apos;Theme4d&apos;,HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/Apttus_Proposal__ProposalAgreementCreate?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_CreateAgreement&quot;, &quot;Create Agreement&quot;),&quot;_self&quot;),HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalAgreementCreate?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_CreateAgreement&quot;, &quot;Create Agreement&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Agreement</label>
    <type>Text</type>
</CustomField>