force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Description__c</fullName>
    <description>The proposal description</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>