force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Grand_Total__c</fullName>
    <formula>Apttus_Proposal__Net_Amount__c + Apttus_Proposal__Shipping_Handling__c + Apttus_Proposal__Sales_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>