force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Internal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Internal_Deadline__c</fullName>
    <label>Internal Deadline</label>
    <type>Date</type>
</CustomField>