force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Net_Amount__c</fullName>
    <formula>Apttus_Proposal__Amount__c  * (1 - Apttus_Proposal__Discount_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>