force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Present__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Present__c</fullName>
    <description>Present the quote/proposal</description>
    <formula>IF (Apttus_Proposal__ReadyToPresent__c, IF($User.UIThemeDisplayed == &apos;Theme4d&apos;,HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/Apttus_Proposal__ProposalPresent?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_Present&quot;, &quot;Present&quot;),&quot;_self&quot;),HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalPresent?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_Present&quot;, &quot;Present&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present</label>
    <type>Text</type>
</CustomField>