force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Preview__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Preview__c</fullName>
    <description>Preview a quote/proposal</description>
    <formula>IF($User.UIThemeDisplayed == &apos;Theme4d&apos;,HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Preview&quot;, IMAGE(&quot;/resource/Apttus_Proposal__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;),HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Preview&quot;, IMAGE(&quot;/resource/Apttus_Proposal__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Preview a quote/proposal</inlineHelpText>
    <label>Preview</label>
    <type>Text</type>
</CustomField>