force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary contact associated with the quote/proposal</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>