force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__RFP_Stage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__RFP_Stage__c</fullName>
    <label>RFP Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expected</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>First Revision</fullName>
            </value>
            <value>
                <fullName>Technical Input</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Internal Approval</fullName>
            </value>
            <value>
                <fullName>Final Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>