force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__RFP_Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__RFP_Value__c</fullName>
    <label>RFP Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>