force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Sales_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Sales_Tax_Percent__c</fullName>
    <label>Sales Tax %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>