force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__SendProposal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__SendProposal__c</fullName>
    <description>Generate and send a quote/proposal</description>
    <formula>IF (Apttus_Proposal__ReadyToGenerate__c, IF($User.UIThemeDisplayed == &apos;Theme4d&apos;,HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/Apttus_Proposal__DocGen?id=&quot;&amp;Id + &quot;&amp;context=proposal&quot; + &quot;&amp;name=&quot;&amp;Name, IMAGE(&quot;/resource/Apttus_Proposal__Button_SendProposal&quot;, &quot;Send Proposal&quot;),&quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus_Proposal__DocGen?id=&quot;&amp;Id + &quot;&amp;context=proposal&quot; + &quot;&amp;name=&quot;&amp;Name, IMAGE(&quot;/resource/Apttus_Proposal__Button_SendProposal&quot;, &quot;Send Proposal&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate and send a quote/proposal</inlineHelpText>
    <label>Send Proposal</label>
    <type>Text</type>
</CustomField>