force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Shipping_Handling__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Shipping_Handling__c</fullName>
    <label>Shipping &amp; Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>