force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Special_Terms__c</fullName>
    <description>The special terms associated with the quote/proposal</description>
    <label>Special Terms</label>
    <type>TextArea</type>
</CustomField>