force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Strategic_Importance__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Strategic_Importance__c</fullName>
    <description>The strategic importance of the quote/proposal</description>
    <label>Strategic Importance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Strategic</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Must Win</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>