force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__SubmitForApproval__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__SubmitForApproval__c</fullName>
    <description>Submit the quote/proposal for approval</description>
    <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approval Required&quot;), HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalSubmit?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_SubmitForApproval&quot;, &quot;Submit for Approval&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit For Approval</label>
    <type>Text</type>
</CustomField>