force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Valid_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Valid_Until_Date__c</fullName>
    <description>The date until the quote/proposal is valid</description>
    <label>Valid Until Date</label>
    <type>Date</type>
</CustomField>