force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPAsset__ConfigureWithAssets__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPAsset__ConfigureWithAssets__c</fullName>
    <description>Configure products (with assets) for the quote/proposal</description>
    <formula>IF ( LEN( Apttus_QPConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_QPAsset__ProposalConfiguration?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Configure products (with assets) for the quote/proposal</inlineHelpText>
    <label>Configure Products</label>
    <type>Text</type>
</CustomField>