force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPComply__CreateAgreementWithLineItems__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPComply__CreateAgreementWithLineItems__c</fullName>
    <description>Create Agreement with line items, if the proposal is accepted.</description>
    <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Accepted&quot;) , HYPERLINK(&quot;/apex/Apttus_QPComply__ProposalAgreementCreate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_QPComply__Button_CreateAgreementWithLineItems&quot;, &quot;Create Agreement with Line Items&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Agreement With Line Items</label>
    <type>Text</type>
</CustomField>