force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPComply__MasterAgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPComply__MasterAgreementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the master agreement associated with the quote/proposal</description>
    <inlineHelpText>ID of the master agreement associated with the quote/proposal</inlineHelpText>
    <label>Master Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Quote/Proposals</relationshipLabel>
    <relationshipName>QuoteProposals</relationshipName>
    <type>Lookup</type>
</CustomField>