force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__Accept__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__Accept__c</fullName>
    <description>Accept the quote/proposal</description>
    <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Presented&quot;), HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalAccept?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Accept&quot;, &quot;Accept&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accept</label>
    <type>Text</type>
</CustomField>