force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__AutoActivateOrder__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__AutoActivateOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the order associated with the quote/proposal will be automatically activated when the quote/proposal is accepted.</description>
    <inlineHelpText>Indicates whether the order associated with the quote/proposal will be automatically activated when the quote/proposal is accepted.</inlineHelpText>
    <label>Auto Activate Order ?</label>
    <type>Checkbox</type>
</CustomField>