force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__AutoCreateBill__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__AutoCreateBill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether billing schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</description>
    <inlineHelpText>Indicates whether billing schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</inlineHelpText>
    <label>Auto Create Bill ?</label>
    <type>Checkbox</type>
</CustomField>