force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__AutoCreateRevenue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__AutoCreateRevenue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether revenue schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</description>
    <inlineHelpText>Indicates whether revenue schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</inlineHelpText>
    <label>Auto Create Revenue ?</label>
    <type>Checkbox</type>
</CustomField>