force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__ConfigureNG__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__ConfigureNG__c</fullName>
    <description>Configure products for the quote/proposal</description>
    <formula>IF ( LEN( Apttus_QPConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot; &amp;Id &amp; &quot;&amp;flow=NGDefault&quot;, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Products (NG)</label>
    <type>Text</type>
</CustomField>