force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__DisableCartVersioning__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__DisableCartVersioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether cart versioning is disabled for the quote/proposal</description>
    <inlineHelpText>Indicates whether cart versioning is disabled for the quote/proposal</inlineHelpText>
    <label>Disable Cart Versioning</label>
    <type>Checkbox</type>
</CustomField>