force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__Intent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__Intent__c</fullName>
    <description>The intent associated with the quote/proposal</description>
    <inlineHelpText>The intent associated with the quote/proposal</inlineHelpText>
    <label>Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Price Agreement</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>