force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__IsAutoAccepted__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__IsAutoAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the quote/proposal was accepted by an auto system operation</description>
    <inlineHelpText>Indicates whether the quote/proposal was accepted by an auto system operation</inlineHelpText>
    <label>Is Auto Accepted</label>
    <type>Checkbox</type>
</CustomField>