force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__IsTaskPending__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__IsTaskPending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether there are any tasks pending for the quote</description>
    <inlineHelpText>Indicates whether there are any tasks pending for the quote</inlineHelpText>
    <label>Is Task Pending</label>
    <type>Checkbox</type>
</CustomField>