force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__ParamData__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__ParamData__c</fullName>
    <description>The parameter data associated with the quote/proposal</description>
    <inlineHelpText>The parameter data associated with the quote/proposal</inlineHelpText>
    <label>Param Data</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>