force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__ParentProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__ParentProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the parent quote/proposal</description>
    <inlineHelpText>ID of the parent quote/proposal</inlineHelpText>
    <label>Parent Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Child Quotes/Proposals</relationshipLabel>
    <relationshipName>ChildQuotesProposals</relationshipName>
    <type>Lookup</type>
</CustomField>